--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon-32x32.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <!--
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Goldfinch</title>
+    <title>Free Artists</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
